k8s/fastapi/fastapi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: fastapi
      app: server
  template:
    metadata:
      labels:
        component: fastapi
        app: server
    spec:
      containers:
        - name: fastapi
          image: 'cooliz/backendfa:2023'
          ports:
            - containerPort: 8000
          imagePullPolicy: Always
      #  volumes:
      #    - name: data
      #      persistentVolumeClaim:
      #        claimName: fastapi
